# WebRtcDemo

./: CMakeLists.txt  Main.qml  VideoFrameProvider.cpp  VideoFrameProvider.h  WebRTC二阶段移植方案.md  WebRTC搭建指南.md  libmediastream设计方案.md  main.cpp
.qtcreator/: CMakeLists.txt.user.d522dfd
libmediastream/: CMakeLists.txt
libmediastream/include/: mediastream.h
libmediastream/src/: api.cpp
libmediastream/src/codec/: H264Decoder.cpp  H264Decoder.h
libmediastream/src/core/: FrameQueue.h  IStreamSource.h  StreamSession.cpp  StreamSession.h  Types.h
libmediastream/src/rtsp/: RtspSource.cpp  RtspSource.h
libmediastream/src/webrtc/: JitterBuffer.cpp  JitterBuffer.h  RtcpFeedback.cpp  RtcpFeedback.h  RtpDepacketizer.cpp  RtpDepacketizer.h  Signaling.cpp  Signaling.h  WebRtcSource.cpp  WebRtcSource.h
libmediastream/test/: main.cpp
signaling-server/: ws-patch.js
